# TWIML-RAG

./: .gitignore  README.md  main.py  notes.md  prompts.csv  pyproject.toml  requirements.txt
chroma_db/huberman/: chroma-collections.parquet
proj/common/: checks.py  files.py  rss.py
proj/docs/: README.md
proj/embeddings/: README.md  config.py.example  pipeline.py  requirements.txt
proj/fn_rag/: README.md  episode_info.json  function_app.py  local.settings.json  make_episode_info.py  requirements.txt
proj/rag/: .gitignore  Pinecone_Indexing.ipynb  README.md  main.py  notes.md  pyproject.toml  requirements.txt  setup.py  utils.py
proj/rag/app/components/document-retrieval-embeddings/: purpose.md
proj/rag/nbs/: Pinecone_Indexing.ipynb
proj/rag/notebooks/: Pinecone_Indexing.ipynb
proj/rag/rag/: __init__.py  app.py  settings.toml  setup.py
proj/rag/rag/configs/: env_vars.py  rag_settings.py
proj/rag/rag/helpers/: chatbot.py  openai_chatbot.py  pinecone_indexes.py
proj/rag/rag/interfaces/: purpose.md
proj/rag/rag/prompts/: purpose.md
proj/rag/rag/schemas/: purpose.md
proj/rag/rag/streamlit/: purpose.md
proj/rag/src/: __init__.py  main.py  settings.toml
proj/rag/src/helpers/: config_utils.py  llm_utils.py
proj/speech_to_text/: .config  .dockerignore  .gcloudignore  .gitignore  Dockerfile  Dockerfile.local  README.md  README_EMBEDS.md  gcloud-batch-config.json  gcloud-twimlrag-init.yml  gcloud_batch_config.json  google_cloud_auth.py  pipeline.py  (+13 more)
rag/: DebuggerNotebook.ipynb  Pinecone_Indexing.ipynb  README.md  Readme.md  main.py  utils.py
(+21 files in other folders)
